--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:140053ken!@10.2.42.7:3306/nextjs16"
+DATABASE_URL="mysql://root:140053ken!@library-server:3306/nextjs16"
