--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "cropperjs": "1.6.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.3.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
