--- a/.gitignore
+++ b/.gitignore
@@ -40,16 +40,15 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/src/lib/generated/prisma
+/lib/generated/prisma
 
-/src/lib/generated/prisma
+/lib/generated/prisma
 
-/src/etc/python/t1
-/src/etc/python/__pycache__
-/src/etc/python/pandas/t1
+etc/python/t1
+etc/python/__pycache__
+etc/python/pandas/t1
 
-
-
-#backend\
-backend/t1
-backend/__pycache__
+backend/__pycache__/
+backend/mod/__pycache__/
+backend/t1/
+src/lib/generated/
