--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:140053ken!@10.2.42.4:3306/nextjs16-dev"
+DATABASE_URL="mysql://root:140053ken!@127.0.0.1:3306/nextjs16"
 
 
 
