--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "socket": "node --loader ts-node/esm ./src/socketio/app.ts"
+    "socket": "node --loader ts-node/esm ./backend/socketio/app.ts"
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^5.2.0",
@@ -34,6 +34,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
